<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cbf_safety_layer</name>
  <version>0.0.0</version>
  <description>Robot agnonistic collision safety layer</description>
  <maintainer email="kyuwon0917@gmail.com">kyuwon</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <exec_depend>cbf_safety_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
